docs: prepare developer documentation for production